Change of styles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Bootstrap minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/master.css">
+    <link rel="stylesheet" href="../google-tag-manager-playground/styles/master.css">
 
 </head>
 <body>
